# boinc-rust-boinc-rpc

./: Cargo.toml
.github/workflows/: main.yml
examples/: rboinc-dump.rs
src/: errors.rs  lib.rs  messages.rs  models.rs  rpc.rs  util.rs
src/messages/: exchange_versions.rs  helpers.rs  host_info.rs
tests/: test_connection.rs  test_exchange_version.rs
tests/common/: mod.rs
