[package]
name = "boinc-rpc"
version = "0.1.0"
authors = [
    "Artem Vorotnikov <artem@vorotnikov.me>",
]
description = "Access BOINC clients via RPC"
edition = "2021"
repository = "https://github.com/vorot93/rust-boinc-rpc"
keywords = [
    "boinc",
    "rpc",
    "api",
]
categories = [
    "api-bindings",
]
license = "Apache-2.0"

[dependencies]
bytes = "1.9.0"
encoding = "0.2"
futures = "0.3"
rust-crypto = "0.2"
tokio = { version = "1.42.0", features = ["net", "sync", "rt-multi-thread"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
tower = { version = "0.5.1", features = ["full"] }
tracing = "0.1"
treexml = "0.7"

[dev-dependencies]
tokio = { version = "1.42.0", features = ["macros"] }
